# Good-Badminton-Fork

./: .gitignore  README.md  README_EN.md  pyproject.toml
badminton_analysis/: system.py
badminton_analysis/court_homography/: __init__.py  extraction.py  hough_fit.py  keypoints.py  model.py  projection.py  render.py  scoring.py
benchmarks/: DESIGN.md  README.md  run.py
benchmarks/core/: __init__.py  dataset.py  registry.py  report.py  runner.py  types.py
benchmarks/court_detection/: __init__.py  benchmark.py  strategies.py
benchmarks/court_homography/: README.md  benchmark.py  strategies.py
benchmarks/suites/: __init__.py
benchmarks/suites/court_detection/: benchmark.py  strategies.py
benchmarks/suites/court_homography/: README.md  __init__.py  benchmark.py  strategies.py
tools/: README.md  __init__.py  download_videos.py  extract_benchmark_frames.py  pick_videos.py  test_court_detection.py
tools/scraper/: README.md  __init__.py  players.py  scrape.py
