[project]
name = "badminton-analysis"
version = "0.1.0"
description = "Badminton video analysis with pose estimation and court detection"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "opencv-python==4.10.0.84",
    "opencv-contrib-python==4.10.0.84",
    "numpy>=1.21.6,<2.0",
    "pillow>=9.2.0,<12.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "ultralytics>=8.0.0",
    "rtmlib>=0.0.1",
    "onnxruntime==1.18.1",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "moviepy>=1.0.3,<2.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
webui = [
    "gradio>=4.0.0",
]

[tool.uv]
# Keep the default PyPI index for macOS (the PyTorch CPU index has no macOS
# wheels); use the dedicated CPU index only on Linux/Windows.

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["badminton_analysis"]
